--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -30,6 +30,7 @@
             <string>FuturaExtended</string>
             <string>FuturaExtended</string>
             <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -90,6 +91,44 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eq9-QA-ai8" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-808" y="-732"/>
+        </scene>
+        <!--Character-->
+        <scene sceneID="k7s-u9-hBy">
+            <objects>
+                <viewController title="Character" id="gZp-84-xdF" customClass="CharacterChangeViewController" customModule="Peng" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="66k-G6-z0a"/>
+                        <viewControllerLayoutGuide type="bottom" id="z5J-LZ-Vp0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BQy-4w-XHj">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HBD-bd-m6Y">
+                                <rect key="frame" x="0.0" y="550" width="600" height="50"/>
+                                <color key="backgroundColor" red="0.20392156859999999" green="0.1960784314" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="WHB-km-cuS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="19"/>
+                                <color key="tintColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="SAVE"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.42745098040000001" green="0.14117647059999999" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="HBD-bd-m6Y" secondAttribute="trailing" id="PA3-AS-6Og"/>
+                            <constraint firstItem="HBD-bd-m6Y" firstAttribute="leading" secondItem="BQy-4w-XHj" secondAttribute="leading" id="a39-nZ-PAI"/>
+                            <constraint firstItem="z5J-LZ-Vp0" firstAttribute="top" secondItem="HBD-bd-m6Y" secondAttribute="bottom" id="kED-cm-JdH"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="saveButton" destination="HBD-bd-m6Y" id="Tth-Oy-oEF"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cdq-76-YAQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1020" y="772"/>
         </scene>
         <!--Main-->
         <scene sceneID="Anx-TT-is3">
@@ -479,7 +518,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-327" y="772"/>
+            <point key="canvasLocation" x="-293" y="944"/>
         </scene>
         <!--New Duel-->
         <scene sceneID="0vg-nN-xTX">
@@ -641,6 +680,47 @@
             </objects>
             <point key="canvasLocation" x="1345" y="22"/>
         </scene>
+        <!--CharacterChange-->
+        <scene sceneID="TRZ-QG-UCL">
+            <objects>
+                <pageViewController storyboardIdentifier="CharacterChangeViewController" autoresizesArchivedViewToFullSize="NO" title="Character Change" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Mlk-Mq-m2L" userLabel="CharacterChange" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wyj-ml-pps" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1736" y="-55"/>
+        </scene>
+        <!--Character Change Item Controller-->
+        <scene sceneID="YzB-9u-kzY">
+            <objects>
+                <viewController storyboardIdentifier="CharacterChangeItemController" id="eF7-Lv-8E1" customClass="CharacterChangeItemController" customModule="Peng" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wz3-dw-k5Y"/>
+                        <viewControllerLayoutGuide type="bottom" id="LaA-C0-z7x"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Vo1-s9-xNN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEH-Nm-qvH">
+                                <rect key="frame" x="279" y="290" width="42" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.42745098040000001" green="0.14117647059999999" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="XEH-Nm-qvH" firstAttribute="centerY" secondItem="Vo1-s9-xNN" secondAttribute="centerY" id="Ifu-tK-h4n"/>
+                            <constraint firstItem="XEH-Nm-qvH" firstAttribute="centerX" secondItem="Vo1-s9-xNN" secondAttribute="centerX" id="Vjf-Xy-TgZ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="characterName" destination="XEH-Nm-qvH" id="ezr-f6-cW3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="39V-lX-Yb2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1736" y="625"/>
+        </scene>
         <!--Settings-->
         <scene sceneID="5GC-71-fKC">
             <objects>
@@ -690,6 +770,9 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" red="0.39607843139999999" green="0.50980392159999999" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="gZp-84-xdF" kind="show" id="uvx-hN-8QG"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GQR-d2-QNa" userLabel="Account Headline View" customClass="HeadlineView" customModule="Peng" customModuleProvider="target">
                                 <rect key="frame" x="20" y="291" width="560" height="24"/>
